force-app/main/default/objects/Fee__c/fields/FeeAmt__c.field-meta.xml
<CustomField>
    <fullName>FeeAmt__c</fullName>
    <defaultValue>0</defaultValue>
    <label>FeeAmt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>