force-app/main/default/objects/Fee__c/fields/FeeDescrition__c.field-meta.xml
<CustomField>
    <fullName>FeeDescrition__c</fullName>
    <label>FeeDescrition</label>
    <length>200</length>
    <type>Text</type>
</CustomField>