force-app/main/default/objects/Fee__c/fields/FeeMonth__c.field-meta.xml
<CustomField>
    <fullName>FeeMonth__c</fullName>
    <label>FeeMonth</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>